[gd_scene load_steps=7 format=3 uid="uid://c3o8ms48an6o5"]

[ext_resource type="Script" path="res://Scripts/Levels/MenuLevel.gd" id="1_uqte2"]
[ext_resource type="FontFile" uid="uid://b4yksjypxgiu8" path="res://Assets/Fonts/PressStart2P/PressStart2P-Regular.ttf" id="2_k77sr"]
[ext_resource type="PackedScene" uid="uid://ctmo01ybxrkrb" path="res://UI/PlayerSelection.tscn" id="3_qedn3"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("2_k77sr")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("2_k77sr")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("2_k77sr")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="MenuLevel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uqte2")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.443137, 0.443137, 0.443137, 1)

[node name="Title" type="Label" parent="."]
modulate = Color(1, 0.890196, 0, 1)
layout_mode = 0
anchor_right = 1.0
offset_top = 48.0
offset_bottom = 64.0
theme_override_fonts/font = SubResource("1")
text = "Tank Trouble"
horizontal_alignment = 1
uppercase = true

[node name="ControlButtons" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.0
offset_top = -24.0
offset_right = 118.0
offset_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Play" type="Button" parent="ControlButtons"]
modulate = Color(0.290196, 1, 0, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("2")
text = "Play"

[node name="HBoxContainer" type="HBoxContainer" parent="ControlButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DebugBTN" type="Button" parent="ControlButtons/HBoxContainer"]
modulate = Color(1, 0.74902, 0, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("3")
text = "Debug: ON"

[node name="ExitBTN2" type="Button" parent="ControlButtons/HBoxContainer"]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("3")
text = "Exit"

[node name="PlayerSelection" parent="." instance=ExtResource("3_qedn3")]
visible = false
layout_mode = 1

[connection signal="pressed" from="ControlButtons/Play" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ControlButtons/HBoxContainer/DebugBTN" to="." method="_on_debug_button_pressed"]
[connection signal="pressed" from="ControlButtons/HBoxContainer/ExitBTN2" to="." method="_on_exit_button_pressed"]
